--- a/index.html
+++ b/index.html
@@ -766,13 +766,13 @@ La finalidad de la cesión es actualizar la base de datos de Tenerife + Sostenib
         <div class="ui-grid-a" style="margin-top:10%;">
         	<div class="ui-block-a">
             	<center>
-                <a id="imgCompartir" href="" onClick="window.open('whatsapp://send?text=Descarga la app de TF + SOSTENIBLE para ANDROID en https://play.google.com/store/apps/details?id=com.creatactil.tfmas para IOS en https://itunes.apple.com/us/app/tenerife-mas-sostenible/id1115817214?mt=8', '_system');"></a>
-                <br>
+                <a id="imgCompartir" href="" onclick="window.plugins.socialsharing.shareViaWhatsApp('Descarga la app de TF + SOSTENIBLE para ANDROID en https://play.google.com/store/apps/details?id=com.creatactil.tfmas para IOS en https://itunes.apple.com/us/app/tenerife-mas-sostenible/id1115817214?mt=8', null /* img */, null /* url */, function() {console.log('share ok')}, function(errormsg){alert(errormsg)})"></a>
+        	    <br>
                 <strong>Compartir App</strong>
             	</center>                          
           </div>
             <div class="ui-block-b">        
-            	<center><a id="imgCorreo" href="info@congresotenerifemassostenible.com"></a>
+            	<center><a id="imgCorreo" href="mailto:info@congresotenerifemassostenible.com"></a>
                 <br>
                 <strong>Correo</strong>
                 </center>
